# DesignPattern

./: CMakeLists.txt  README.md  token.txt
AbstractFactoryMethod/: AbstractFactory.hpp  CMakeLists.txt  README.md  test.cpp
AbstractFactoryMethod/include/: abstractFactory.h  command.h  connection.h  datareader.h  oracleFactory.h  oraclecommand.h  oracleconnection.h  oraclereader.h  sqlFactory.h  sqlcommand.h  sqlconnection.h  sqlreader.h
AbstractFactoryMethod/src/: abstractFactory.cc  command.cc  connection.cc  datareder.cc  main.cpp  oracleFactory.cc  oraclecommand.cc  oracleconnection.cc  oraclereader.cc  sqlcommand.cc  sqlconnection.cc  sqlfactory.cc  sqlreader.cc
AdapterMethod/src/: adapter.cpp
BridgeMethod/: Bridge.hpp  CMakeLists.txt  README.md  t_Bridge.hpp  test.cpp
BridgeMethod/include/: abstract.h  abstractImplement.h  concreteAbstractionImplementA.h  concreteAbstractionImplementB.h  refineAbstractA.h  refineAbstractB.h
BridgeMethod/src/: abstract.cpp  abstractionImplement.cpp  concreteAbstractionImplementA.cpp  concreteAbstractionImplementB.cpp  main.cpp  refineAbstractA.cpp  refineAbstractB.cpp
BulidMethod/: CMakeLists.txt
BulidMethod/include/: house.h  housebuilder.h  housedirect.h  stoneHouse.h  stonehousebuilder.h
BulidMethod/src/: house.cc  housebuilder.cc  housedirect.cc  main.cc  stonehouse.cc  stonehousebuilder.cc
DecoratorMethod/: CMakeLists.txt  Decorator.hpp  README.md  t_Decorator.hpp  test.cpp
DecoratorMethod/include/: concreteDecoratorA.h  concreteDecoratorB.h  decorator.h  person.h
DecoratorMethod/src/: concreteDecoratorA.cpp  concreteDecoratorB.cpp  decorator.cpp  main.cpp  person.cpp
FacadeMethod/: CMakeLists.txt
FactoryMethod/: CMakeLists.txt  Factory.hpp  README.md  t_Factory.hpp  test.cpp
FactoryMethod/include/: binarySplitter.h  binarySplitterFactory.h  iSplitter.h  pictureSplitter.h  pictureSplitterFactory.h  splitterFactory.h  txtSplitter.h  txtSplitterFactory.h  videoSplitter.h  videoSplitterFactory.h
FactoryMethod/src/: binarySplitter.cc  binarySplitterFactory.cc  main.cpp  pictureSplitter.cc  pictureSplitterFactory.cc  splitterFactory.cc  txtSplitter.cc  txtSplitterFactory.cc  videoSplitter.cc  videoSplitterFactory.cc
FlyWeightMethod/: CMakeLists.txt
FlyWeightMethod/include/: font.h  fontfactory.h
FlyWeightMethod/src/: font.cpp  fontfactory.cpp  main.cpp
MementoMethod/src/: main.cpp
ObserverMethod/: CMakeLists.txt  Observer.hpp  README.md  test.cpp
ObserverMethod/include/: concreteObserver.h  concreteSubject.h  observer.h  subject.h
ObserverMethod/src/: concreteObserver.cpp  concreteSubject.cpp  main.cpp  observer.cpp  subject.cpp
PrototypeMethod/: CMakeLists.txt
PrototypeMethod/include/: binarySplitter.h  iSplitter.h  pictureSplitter.h  txtSplitter.h  videoSplitter.h
PrototypeMethod/src/: binarySplitter.cc  iSplitter.cc  main.cpp  pictureSplitter.cc  txtSplitter.cc  videoSplitter.cc
ProxyMethod/: CMakeLists.txt
ProxyMethod/include/: realsubject.h  subject.h  subjectProxy.h
ProxyMethod/src/: main.cpp  realsubject.cpp  subject.cpp  subjectProxy.cpp
ResponsibilityChain/: README.md  ResponsibilityChain.hpp  test.cpp
ResponsibilityChainMethod/: CMakeLists.txt  README.md  ResponsibilityChain.hpp  t_ResponsibilityChain.hpp
Singleton/: CMakeLists.txt  README.md  singleton.hpp  test.cpp
Singleton/include/: singleton.h
Singleton/src/: main.cc  singleton.cc
StateMethod/: main.cpp
StrategyMethod/: CMakeLists.txt  README.md  Strategy.hpp  t_Strategy.hpp  test.cpp
StrategyMethod/include/: concreteStrategyA.h  concreteStrategyB.h  concreteStrategyC.h  context.h  strategyClass.h
StrategyMethod/src/: concreteStrategyA.cpp  concreteStrategyB.cpp  concreteStrategyC.cpp  context.cpp  main.cpp  strategyClass.cpp
TemplateMethod/: CMakeLists.txt  README.md  Template.hpp  t_Template.hpp  test.cpp
TemplateMethod/include/: abstractClass.h  concreteClassA.h  concreteClassB.h
TemplateMethod/src/: abstractClass.cpp  concreteClassA.cpp  concreteClassB.cpp  main.cpp
figures/: stategy.drawio
